[gd_scene load_steps=10 format=3 uid="uid://chb01cgxrue8q"]

[ext_resource type="Script" path="res://Scripts/Asset.gd" id="1_lokag"]
[ext_resource type="Script" path="res://Scripts/CharacterBodyAsset.gd" id="2_3gwte"]
[ext_resource type="Texture2D" uid="uid://bjyipskipdu1t" path="res://Art/Assets/AssetFrame.png" id="3_i0kgd"]
[ext_resource type="Texture2D" uid="uid://calwapxpp2fs0" path="res://Art/Assets/painting.png" id="4_8nuya"]
[ext_resource type="Texture2D" uid="uid://bsqvb6p4uqpb6" path="res://Art/Assets/apple.png" id="4_pwopb"]
[ext_resource type="Texture2D" uid="uid://dxocpotgysd06" path="res://Art/Assets/table.png" id="4_sf10l"]
[ext_resource type="Texture2D" uid="uid://c1wi2dbeppph6" path="res://Art/Assets/painting2.png" id="5_7vf7p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eya8p"]
size = Vector2(32, 31.8333)

[sub_resource type="SpriteFrames" id="SpriteFrames_i0nnc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pwopb")
}],
"loop": true,
"name": &"Apple",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8nuya")
}],
"loop": true,
"name": &"Painting1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7vf7p")
}],
"loop": true,
"name": &"Painting2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_sf10l")
}],
"loop": true,
"name": &"Table",
"speed": 5.0
}]

[node name="Asset" type="Node2D"]
script = ExtResource("1_lokag")

[node name="CharacterBodyAsset" type="CharacterBody2D" parent="."]
scale = Vector2(6, 6)
collision_mask = 2
input_pickable = true
motion_mode = 1
script = ExtResource("2_3gwte")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBodyAsset"]
z_index = 1
shape = SubResource("RectangleShape2D_eya8p")

[node name="Frame" type="Sprite2D" parent="CharacterBodyAsset/CollisionShape2D"]
texture_filter = 1
texture = ExtResource("3_i0kgd")

[node name="Animations+Sprites" type="AnimatedSprite2D" parent="CharacterBodyAsset"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_i0nnc")
animation = &"Apple"

[node name="PickableButtonController" type="Node2D" parent="."]
z_index = 5

[node name="InfrontOrBehind" type="CheckButton" parent="PickableButtonController"]
offset_left = -57.0
offset_top = -136.0
offset_right = 53.0
offset_bottom = -105.0
text = "Infront?"

[node name="Falls" type="CheckButton" parent="PickableButtonController"]
offset_left = -57.0
offset_top = -161.0
offset_right = 53.0
offset_bottom = -130.0
text = "Falls?"

[node name="Delay" type="TextEdit" parent="PickableButtonController/Falls"]
visible = false
layout_mode = 0
offset_left = 113.0
offset_top = -4.0
offset_right = 195.0
offset_bottom = 35.0
placeholder_text = "fall delay"

[node name="WhoDoesItFallOn?" type="OptionButton" parent="PickableButtonController/Falls"]
visible = false
layout_mode = 0
offset_left = 201.0
offset_top = -3.0
offset_right = 330.0
offset_bottom = 34.0
item_count = 2
selected = 0
popup/item_0/text = "Characters"
popup/item_0/id = 0
popup/item_1/text = "Floor"
popup/item_1/id = 1

[connection signal="mouse_entered" from="CharacterBodyAsset" to="." method="_on_character_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="CharacterBodyAsset" to="." method="_on_character_body_2d_mouse_exited"]
[connection signal="toggled" from="PickableButtonController/InfrontOrBehind" to="CharacterBodyAsset" method="_on_infront_or_behind_toggled"]
[connection signal="toggled" from="PickableButtonController/Falls" to="." method="_on_falls_toggled"]
[connection signal="toggled" from="PickableButtonController/Falls" to="CharacterBodyAsset" method="_on_falls_toggled"]
[connection signal="item_selected" from="PickableButtonController/Falls/WhoDoesItFallOn?" to="CharacterBodyAsset" method="_on_who_does_it_fall_on_item_selected"]
